Fixes for segfaults and Ubuntu upstart script pid tracking. Documentation updates.
* Fixed issues with segfaults due to changes introduced with Kafka integration
* Fixed issue with upstart not being able to track the PID correctly. New '-f' option
  has been added to support upstart. This option instructs openbmpd to run in foreground.
  Upstart can track this consistently.
* Changed various methods in Kafka implementation to use common large buffer
  instead of allocating it for each message.  This improves CPU usage during higher loads.
* Updated install documentation